fix for text overlapping in popups

--- a/wp/wp-content/themes/turbulence/css/main.css
+++ b/wp/wp-content/themes/turbulence/css/main.css
@@ -1679,13 +1679,13 @@ body *:focus {
   margin: 0;
 }
 .i-item__popup-title {
-  padding: 10px;
+  padding: 10px 10px 2px;
   text-align: right;
   font-size: 14px;
   line-height: 18px;
   font-family: "Merriweather", serif;
   font-weight: 700;
-  white-space: normal;
+  white-space: normal;  position: absolute;  z-index: 10;  width: 180px;
 }
 .i-item__popup-title span {
   font-weight: 400;
